istiofiles/destination-rule-catalog-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: null
  name: catalog
  namespace: tutorial
spec:
  host: catalog
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
---
