istiofiles/virtual-service-catalog-503.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
  namespace: tutorial
spec:
  hosts:
  - catalog
  http:
  - fault:
      abort:
        httpStatus: 503
        percent: 50
    route:
    - destination:
        host: catalog
        subset: app-catalog
---
