istiofiles/virtual-service-catalog-v1-mirror-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
  namespace: tutorial
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
    mirror:
      host: catalog
      subset: version-v2
---
