istiofiles/virtual-service-catalog-v1_and_v2_40_60.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
      weight: 40
    - destination:
        host: catalog
        subset: version-v2
      weight: 60
---
