istiofiles/virtual-service-catalog-v1_and_v2_70_30.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
      weight: 70
    - destination:
        host: catalog
        subset: version-v2
      weight: 30
---
