istiofiles/virtual-service-catalog-v1_and_v2_75_25.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: catalog
  namespace: tutorial
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v1
      weight: 75
    - destination:
        host: catalog
        subset: version-v2
      weight: 25
---
