istiofiles/virtual-service-catalog-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
  namespace: tutorial
spec:
  hosts:
  - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: version-v3
      weight: 100
---
