istiofiles/virtual-service-catalog-virtualized.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: catalog
  namespace: tutorial
spec:
  hosts:
  - catalog
  http:
  - match:
    - sourceLabels:
        app: preference
        version: v2
    route:
    - destination:
        host: catalog
        subset: version-virtualized
  - route:
    - destination:
        host: catalog
        subset: version-v1
---
